--- a/MeuPrimeiroSite.html
+++ b/MeuPrimeiroSite.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <header>
+            <img src="home.png" alt="Home">
             <h1>Sejam Bem Vindos!</h1>
         </header>
         <section>
@@ -17,6 +18,7 @@
                     <h3>Vou fazer alguns testes a seguir:</h3>
                 </header>
                 <p>
+                    <img src="codes.png" alt="codes">
                     Gostaria de Conhecer meus Trabalhos? é só acessar <a  href="https://github.com/dev-kiraly" target="_blank">meu perfil do GitHub</a>, e acompanhar meus códigos!
                     Mas se quiser me enviar um email com uma proposta de trabalho, você pode fazer isso clicando <a href="mailto:dev.kiraly@gmail.com">nesse link</a>.
                 </p>
