--- a/Estudos/ProjetoEmHTML/MeuPrimeiroSite.html
+++ b/Estudos/ProjetoEmHTML/MeuPrimeiroSite.html
@@ -3,21 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>Meu Primeiro Site</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
             <img src="home.png" alt="Home">
-            <h1>Sejam Bem Vindos!</h1>
+            <h1 id="title">Sejam Bem Vindos!</h1>
         </header>
 
         <section>
             <header>
-                <h2>Esse é meu primeiro site em html, espero que gostem!</h2>
+                <h2 class="subtitle">Esse é meu primeiro site em html, espero que gostem!</h2>
             </header>
 
             <article>
                 <header>
-                    <h3>Vou fazer alguns testes a seguir:</h3>
+                    <h3 class="post_title">Vou fazer alguns testes a seguir:</h3>
                 </header>
                 <p>
                     <img src="codes.png" alt="codes img">
@@ -26,7 +27,27 @@
                 </p>
             </article>
         </section>
-        <footer></footer>
+        <footer>
+            <ol>
+                <h4>
+                    Contatos:
+                </h4>
+                <ul>
+                    <li>
+                        Email: <a href="mailto:dev.kiraly@gmail.com">dev.kiraly@gmail.com</a>
+                    </li>
+                    <li>
+                        WhatsApp: (12) 981917400
+                    </li>
+                    <li>
+                        Telefone: (12) 981937276
+                    </li>
+                    <li>
+                        GitHub: <a href="https://github.com/dev-kiraly">dev-kiraly</a>
+                    </li>
+                </ul>
+            </ol>
+        </footer>
     </body>
 
 
