--- a/Estudos/MenuDeHamburguer + css/aula9.html
+++ b/Estudos/MenuDeHamburguer + css/aula9.html
@@ -40,17 +40,18 @@
         <main class="container">
             <div class="card-container">
                 <div class="card-text">
-                    <h2>GitHub</h2>
-                    <p>Lorem ipsum dolor sit amet. Sed optio aliquam 
-                        eum impedit temporibus non cumque accusantium est sint 
-                        aliquam qui voluptas dolores hic quisquam fugiat. Rem doloremque 
-                        quisquam At dignissimos optio a nobis accusamus. Et velit magni qui 
-                        minus perferendis eum ullam cupiditate est reiciendis expedita ut 
-                        quia illo id culpa explicabo.</p>
+                    <h2>Caro visitante,</h2>
+                    <p>
+                        Tenho o prazer de te apresentar esse site que pude desenvolvar durante 
+                        o projeto no bootcamp da DIO. As aulas foram mais do tipo "copie e aprenda",
+                        mas sou bem curioso e sedento de progresso, então fui fuçando e vendo as possibilidades
+                        que o css poderia proporcionar e fui estilizando segundo meu gosto. Espero que Gostem!
+                    </p>
                 </div>
                 <div class="card-1">
                     <div class="card-wrapper">
-                        <p>Veja meus Projetos!</p>
+                        <h2>sejam bem vindos</h2>
+                        <p>(:</p>
                     </div>
                 </div>
             </div>
@@ -58,36 +59,42 @@
             <div class="card-container">
                 <div class="card-2">
                     <div class="card-wrapper">
-                        <p>Veja meus Projetos!</p>
+                        <h2>Pequenas Mudanças</h2>
+                        <p>detalhes são importantes</p>
                     </div>
                 </div>
                 <div class="card-text">
-                    <h2>GitHub</h2>
-                    <p>Lorem ipsum dolor sit amet. Sed optio aliquam 
-                        eum impedit temporibus non cumque accusantium est sint 
-                        aliquam qui voluptas dolores hic quisquam fugiat. Rem doloremque 
-                        quisquam At dignissimos optio a nobis accusamus. Et velit magni qui 
-                        minus perferendis eum ullam cupiditate est reiciendis expedita ut 
-                        quia illo id culpa explicabo.</p>
+                    <h2>Algumas mudanças</h2>
+                    <p>
+                        Fiz algumas mudanças no código, como disse no card anterior. 
+                        Algumas delas são: mudar o menu para o lado que ele geralmente 
+                        fica (esquerdo). Mudei as animações e ampliei os efeitos 
+                        hover para todo o card, alterando as cores das fontes.
+                    </p>
                 </div>
             </div>
             <div class="space"></div>
             <div class="card-container">
                 <div class="card-text">
-                    <h2>GitHub</h2>
-                    <p>Lorem ipsum dolor sit amet. Sed optio aliquam 
-                        eum impedit temporibus non cumque accusantium est sint 
-                        aliquam qui voluptas dolores hic quisquam fugiat. Rem doloremque 
-                        quisquam At dignissimos optio a nobis accusamus. Et velit magni qui 
-                        minus perferendis eum ullam cupiditate est reiciendis expedita ut 
-                        quia illo id culpa explicabo.</p>
+                    <h2>Expectativas</h2>
+                    <p>
+                        Estou muito confiante que esse bootcamp da DIO vai fazer uma grande diferença
+                        na minha vida, e vou me esforçar muito para isso acontecer. Tenho estudado após 
+                        as 23hs quando meu filho de 1 ano dorme. Tenho poucas horas por dia, então aproveito
+                        ao máximo os conteúdos, e só sigo adiante depois que domino o que acabei de estudar.
+                        Espero poder chamar a atençâo de um recrutador para uma vaga... (:
+                    </p>
                 </div>
                 <div class="card-3">
                     <div class="card-wrapper">
-                        <p>Veja meus Projetos!</p>
+                        <h2>Expectativas</h2>
+                        <p>vai dar tudo certo!</p>
                     </div>
                 </div>
             </div>
         </main>
+        <footer class="footer">
+            by Jonathan Kiraly
+        </footer>
     </body>
 </html>
