Projeto Tip Calculator Concluído

--- a/Estudos/Projetos e Desafios Pessoais/Tip Calculator - JS/tip-calculator-app-main/index.html
+++ b/Estudos/Projetos e Desafios Pessoais/Tip Calculator - JS/tip-calculator-app-main/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/styles.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/jk-logo.png">
   
-  <title>Frontend Mentor | Tip calculator app</title>
+  <title>Tip calculator</title>
 
   
   <style>
@@ -98,6 +98,7 @@
           </div>
 
         </div>
+
         <div id="numPeople">
             <h5>Number of People</h5>
           <div class="inputBox">
@@ -106,6 +107,7 @@
           </div>
         </div>
       </div>
+
 
       <div id="outputs" class="subCards">
         <div id="resultHolder">
@@ -131,7 +133,6 @@
               <h2 id="totalPerPersonOutput">0</h2>
             </div>
           </div>
-
 
           <div id="totalBill" class="result">
             <div class="resultText">
